--- a/Word-Add-in-AIGC/4f34c2af53eeef0317ee.css
+++ b/Word-Add-in-AIGC/4f34c2af53eeef0317ee.css
@@ -100,6 +100,14 @@ a {
     font-weight: 500;
 }
 
+.generate_button_or {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    font-size: 1rem;
+}
+
 .bottom {
     width: 100%;
 }
