--- a/Word-Add-in-AI-Assistant/src/taskpane/css/Home.css
+++ b/Word-Add-in-AI-Assistant/src/taskpane/css/Home.css
@@ -14,6 +14,8 @@ body,
     height: 100%;
     margin: 0;
     padding: 0;
+    overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 .f1i3iumi {
@@ -63,13 +65,17 @@ body,
     align-items: center;
 }
 
-.switchIcon {
-    margin-right: 0.5rem;
+.setting {
+    font-size: 20px;
 }
 
 .setting:hover {
     color: #0066ff;
     border-color: #0066ff;
+}
+
+.switchIcon {
+    margin-right: 0.5rem;
 }
 
 .option_selection {
