--- a/Word-Add-in-AIGC/src/taskpane/css/sample.css
+++ b/Word-Add-in-AIGC/src/taskpane/css/sample.css
@@ -15,6 +15,7 @@ body,
     margin: 0;
     padding: 0;
     border-width: 0;
+    overflow: hidden;
 }
 
 .f1i3iumi {
@@ -23,6 +24,7 @@ body,
     margin: 0;
     padding: 0;
     border-width: 0;
+    overflow: hidden;
 }
 
 .wrapper {
@@ -32,7 +34,8 @@ body,
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
     background-color: #F0F0F0;
 }
 
@@ -77,7 +80,7 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
 .back {
@@ -106,6 +109,14 @@ a {
     align-items: center;
     width: 100%;
     font-size: 1rem;
+}
+
+.dropdown_list,
+.insert_button {
+    width: 90%;
+    color: var(--blue);
+    margin: 1.5rem;
+    font-weight: 500;
 }
 
 .bottom {
