--- a/Word-Add-in-AIGC/src/taskpane/css/sample.css
+++ b/Word-Add-in-AIGC/src/taskpane/css/sample.css
@@ -123,27 +123,26 @@ a {
     width: 100%;
 }
 
-.item_desc {
-    margin: 0.2rem 1rem;
-    font-weight: 500;
-}
-
 .bottom_item {
     width: 100%;
+    height: 35px;
     font-weight: 400;
     background-color: white;
-    margin: 0.3rem 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 .item_icon {
     padding-top: 0.1rem;
     padding-bottom: 0.1rem;
-    display: inline-block;
+    display: inline;
     color: var(--blue);
 }
 
 .bottom_item_info {
-    display: inline-block;
+    display: inline;
     font-weight: 500;
 }
 
